--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
     </style>
   </head>
   <body>
-    <img src="first-gh-deployment.svg" alt="First GitHub Deployment" title="First GitHub Deployment" height="50" width="184" />
-    <main>
-      <h1>Congratulations!</h1>
-      <h2>You just made your third (second (first)) GitHub deployment.</h2>
-    </main>
+    hola <!-- previous version at --> <a href="index20180820.html"?>.</a>
   </body>
 </html>
